--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,9 +11,6 @@ on:
     paths:
       - 'src/**'
       - '.github/workflows/*.yml'
-env:
-    BuildProject: '.\Configuration.sln'
-    DotNetVersion: '6.0.x'
 
 jobs:
 
@@ -35,11 +32,11 @@ jobs:
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: ${{ env.DotNetVersion }}
+          dotnet-version: '6.0.x'
 
       - name: Build
         if: ${{ github.ref != 'refs/heads/preview' }}
-        run: msbuild {{ env.BuildProject }} /restore -m -property:Configuration=Release
+        run: msbuild Configuration.sln /restore -m -property:Configuration=Release
 
       - name: Publish NuGets
         if: ${{ github.ref == 'refs/heads/master' || github.ref == 'refs/heads/preview' }}
