--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,15 @@ jobs:
         with:
           dotnet-version: '6.0.x'
 
+      - name: Add .NET 6 Android Workload
+        run: dotnet workload install android
+
+      - name: Add .NET 6 iOS Workload
+        run: dotnet workload install ios
+
+      - name: Add .NET 6 MacCatalyst Workload
+        run: dotnet workload install maccatalyst
+        
       - name: Build
         if: ${{ github.ref != 'refs/heads/preview' }}
         run: msbuild Build.slnf /restore -m -property:Configuration=Release
