--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,12 +5,11 @@ on:
     branches: [ master, preview ]
     paths:
       - 'src/**'
-      - '.github/workflows/*.yml'
+      - '.github/workflows/**'
   pull_request:
     branches: [ master ]
     paths:
       - 'src/**'
-      - '.github/workflows/*.yml'
 
 jobs:
 
@@ -42,7 +41,7 @@ jobs:
 
       - name: Add .NET 6 MacCatalyst Workload
         run: dotnet workload install maccatalyst
-        
+
       - name: Build
         if: ${{ github.ref != 'refs/heads/preview' }}
         run: msbuild Build.slnf /restore -m -property:Configuration=Release
