--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,7 +45,7 @@ jobs:
         run: dotnet workload install maccatalyst
 
       - name: Build
-        run: msbuild Build.slnf /restore -m -property:Configuration=Release -property:PublicRelease=true
+        run: msbuild Build.slnf /restore -m -property:Configuration=Release
 
       - name: Publish NuGets
         if: ${{ github.ref == 'refs/heads/master' || github.ref == 'refs/heads/preview' }}
