--- a/src/Shiny.Extensions.Configuration/Shiny.Extensions.Configuration.csproj
+++ b/src/Shiny.Extensions.Configuration/Shiny.Extensions.Configuration.csproj
@@ -2,8 +2,8 @@
 
 	<PropertyGroup>
 		<TargetFrameworks>netstandard2.0;xamarin.ios10;monoandroid12.0</TargetFrameworks>
-        <TargetFrameworks>$(TargetFrameworks);net6.0-android;net6.0-ios;net6.0-maccatalyst</TargetFrameworks>
-        <ImplicitUsings>disable</ImplicitUsings>
+        <!--<TargetFrameworks>$(TargetFrameworks);net6.0-android;net6.0-ios;net6.0-maccatalyst</TargetFrameworks>-->
+        <ImplicitUsings>false</ImplicitUsings>
 		<!--<TargetFrameworks Condition=" '$(OS)' == 'Windows_NT' ">$(TargetFrameworks);uap10.0.19041;net6.0-windows10.0.19041;</TargetFrameworks>-->
         <Description>Xamarin Configuration Sources (Android/iOS) for Microsoft.Extensions.Configuration</Description>
         <Product>$(AssemblyName) ($(TargetFramework))</Product>
