--- a/Sample/SampleMaui/SampleMaui.csproj
+++ b/Sample/SampleMaui/SampleMaui.csproj
@@ -58,7 +58,7 @@
 	<ItemGroup>
 	  <None Remove="Resources\appicon.svg" />
 	  <None Remove="Resources\appiconfg.svg" />
-	  <None Remove="Resources\Fonts\OpenSans-Regular.ttf" />
+	  <None Remove="Resources\Fonts\OpenSans.ttf" />
 	  <None Remove="Resources\Images\dotnet_bot.svg" />
 	  <None Remove="Resources\Raw\appsettings.json" />
 	</ItemGroup>
@@ -66,7 +66,7 @@
 	<ItemGroup>
 	  <AndroidResource Include="Resources\appicon.svg" />
 	  <AndroidResource Include="Resources\appiconfg.svg" />
-	  <AndroidResource Include="Resources\Fonts\OpenSans-Regular.ttf" />
+	  <AndroidResource Include="Resources\Fonts\OpenSans.ttf" />
 	  <AndroidResource Include="Resources\Images\dotnet_bot.svg" />
 	  <AndroidResource Include="Resources\Raw\appsettings.json" />
 	</ItemGroup>
